--- a/work/package.json
+++ b/work/package.json
@@ -22,6 +22,7 @@
     "gulp-sass": "^4.0.2",
     "gulp-uglify": "^2.1.0",
     "gulp-util": "^3.0.8",
+    "tar": "^4.4.8",
     "vinyl-ftp": "^0.6.0"
   }
 }
