--- a/work/package.json
+++ b/work/package.json
@@ -9,9 +9,9 @@
   "author": "WebDesign Master",
   "license": "ISC",
   "devDependencies": {
-    "browser-sync": "^2.26.5",
+    "browser-sync": "^2.26.7",
     "del": "^2.2.2",
-    "gulp": "^4.0.2",
+    "gulp": "3.9.1",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-cache": "^0.4.6",
     "gulp-clean-css": "^3.0.3",
